--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,8 @@ nav:
            - 电磁学: "大学物理/电磁学.md"
       - 微积分考研复习资料:
            - 基础: "微积分考研/微积分考研.md"
+  - 随笔:
+      - 关于高考的碎碎念: "随笔/一些碎碎念.md"
 
 
 theme:
