--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ nav:
       - "index.md"
   - 课内学习资料:
       - 谢小平大物PPT整理: 
-           - 热力学: "大学物理/热力学.md"
+           - 热力学: "大学物理/热学/热学.md"
            - 电磁学: "大学物理/电磁学.md"
       - 微积分考研复习资料:
            - 基础: "微积分考研/微积分考研.md"
