--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,34 +19,15 @@ theme:
   logo: images/logo.jpg
   favicon: images/logo.jpg
   language: zh # 默认语言
-  features: # 功能  
-    - announce.dismiss # 可以叉掉公告的功能
-    - content.action.edit # 编辑按钮，似乎没啥用
-    - content.action.view # 查看按钮，似乎没啥用
-    - content.code.annotate # 代码注释，具体不清楚
-    - content.code.copy # 复制代码按钮
-    # - content.code.select # 选择代码按钮
-    # - content.tabs.link # 链接标签
-    - content.tooltips # 不太清楚呢这个
-    # - header.autohide # 自动隐藏header
-    - navigation.expand # 默认展开导航栏
-    - navigation.footer # 底部导航栏
-    - navigation.indexes # 索引按钮可以直接触发文件，而不是只能点击其下属选项浏览，这个功能可以给对应的section提供很好的预览和导航功能
-    # - navigation.instant # 瞬间加载 最好注释掉，多语言切换这个会导致跳回首页
-    - navigation.instant.prefetch # 预加载
-    - navigation.instant.progress # 进度条
-    - navigation.path # 导航路径， 目前好像没啥用
-    # - navigation.prune # 只构建可见的页面
-    - navigation.sections # 导航栏的section
-    - navigation.tabs # 顶级索引被作为tab
-    - navigation.tabs.sticky # tab始终可见
-    - navigation.top # 开启顶部导航栏
-    - navigation.tracking # 导航栏跟踪
-    - search.highlight # 搜索高亮
-    - search.share # 搜索分享
-    - search.suggest # 搜索建议
-    - toc.follow # 目录跟踪-页面右侧的小目录
-    # - toc.integrate # 目录跟踪集成到左侧大目录中
+  features:
+    - navigation.tabs
+    - navigation.tracking # 地址栏中的 URL 会随当前位置变化为对应小节的 URL
+    - navigation.indexes # 将 index 页面直接附到小节名上
+    - navigation.top # 回到顶部按钮
+    - toc.follow # toc 跟随
+    #- navigation.sections
+    - toc.follow
+    - navigation.top
   palette:
     - media: "(prefers-color-scheme)" # 主题颜色
       scheme: slate
