--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,8 @@ site_author: 吴必兴
 
 nav:
   - 首页: index.md
-  - 大二秋冬:
+  - 大二秋冬: 
+      - 课程概览: 大二秋冬/index.md
       - 电子电路基础: 
           - 课程指北: 大二秋冬/电子电路基础/课程指北/index.md
           - 电路原理整理: 大二秋冬/电子电路基础/电路原理/notes/index.md
