--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,9 +9,23 @@ nav:
           - 课程指北: 大二秋冬/电子电路基础/课程指北/index.md
           - 电路原理整理: 大二秋冬/电子电路基础/电路原理/notes/index.md
           - 模电整理: 大二秋冬/电子电路基础/模电/notes/index.md
+      - 大学物理甲II: 
+          - 课程指北: 大二秋冬/大学物理甲II/课程指北/index.md
+      - 数学建模:
+          - 课程指北: 大二秋冬/数学建模/课程指北/index.md
+      - 固体物理基础:
+          - 课程指北: 大二秋冬/固体物理基础/课程指北/index.md
+      - 概率论与数理统计:
+          - 课程指北: 大二秋冬/概率论与数理统计/课程指北/index.md
+      - 数值分析方法: 
+          - 课程指北: 大二秋冬/数值分析方法/课程指北/index.md
       - 复变函数与积分变换: 
           - 课程指北: 大二秋冬/复变函数与积分变换/课程指北/index.md
           - 杨海涛老师的PPT: 大二秋冬/复变函数与积分变换/PPT/index.md
+      - 大学物理实验: 
+          - 课程指北: 大二秋冬/大学物理实验/课程指北/index.md
+      - 工程训练: 
+          - 课程指北: 大二秋冬/工程训练/课程指北/index.md
   - Code: Code/index.md
   - 收藏的网页: 收藏的网页/index.md
 theme:
