--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
           - 课程指北: 大二秋冬/电子电路基础/课程指北/index.md
           - 电路原理整理: 大二秋冬/电子电路基础/电路原理/notes/index.md
           - 模电整理: 大二秋冬/电子电路基础/模电/notes/index.md
+          - 电子电路基础习题集萃: 大二秋冬/电子电路基础/电基习题集萃/index.md
       - 大学物理甲II: 
           - 课程指北: 大二秋冬/大学物理甲II/课程指北/index.md
       - 数学建模:
@@ -26,6 +27,10 @@ nav:
           - 课程指北: 大二秋冬/大学物理实验/课程指北/index.md
       - 工程训练: 
           - 课程指北: 大二秋冬/工程训练/课程指北/index.md
+      - 电子电路设计实验I: 
+          - 课程指北: 大二秋冬/电设实验I/课程指北/index.md
+      - 通识课专栏: 
+          - 课程指北: 大二秋冬/通识课/课程指北/index.md
   - Code: Code/index.md
   - 收藏的网页: 收藏的网页/index.md
 theme:
