--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,8 @@ nav:
           - 课程指北: 大二秋冬/大学物理实验/课程指北/index.md
       - 工程训练: 
           - 课程指北: 大二秋冬/工程训练/课程指北/index.md
+      - 工程导论: 
+          - 课程指北: 大二秋冬/工程导论/课程指北/index.md
       - 电子电路设计实验I: 
           - 课程指北: 大二秋冬/电设实验I/课程指北/index.md
       - 通识课专栏: 
