--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
       - 复变函数与积分变换: 
           - 课程指北: 大二秋冬/复变函数与积分变换/课程指北/index.md
           - 杨海涛老师的PPT: 大二秋冬/复变函数与积分变换/PPT/index.md
+          - 复变函数复习笔记: 大二秋冬/复变函数与积分变换/复习笔记/index.md
       - 大学物理实验: 
           - 课程指北: 大二秋冬/大学物理实验/课程指北/index.md
       - 工程训练: 
