--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
   - 硬件技能: 
       - 简介: 硬件技能/简介/index.md
       - 机械传动: 硬件技能/机械传动/index.md
+      - 电机概述: 硬件技能/电机概述/index.md
   - Coding: Code/index.md
   - 收藏的网页: 收藏的网页/index.md
 theme:
