--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,6 @@ jobs:
       - run: pip install mkdocs-material
       - run: pip install mkdocs-git-revision-date-localized-plugin
       - run: pip install mkdocs-statistics-plugin
-      - run: pip install mkdocs-heti-plugin      
+      - run: pip install mkdocs-heti-plugin
+      - run: pip install mkdocs-glightbox      
       - run: mkdocs gh-deploy --force
