--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,7 @@ nav:
   - Coding: Code/index.md
   - Bixing's 收藏页: 
       - 收藏的网页: Bixing's 收藏页/收藏的网页/index.md
+      - MyCC98: Bixing's 收藏页/CC98/index.md
       - 时间管理: Bixing's 收藏页/时间管理/index.md
       - 用随机梯度下降来优化人生: Bixing's 收藏页/李沐大佬/index.md
 
