--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,8 @@ nav:
           - 知识点整理: 大二秋冬/概率论与数理统计/知识点整理/index.md
       - 数值分析方法: 
           - 课程指北: 大二秋冬/数值分析方法/课程指北/index.md
+          - 知识图谱: 大二秋冬/数值分析方法/知识图谱/index.md
+          - 知识整理: 大二秋冬/数值分析方法/知识整理/index.md
       - 复变函数与积分变换: 
           - 课程指北: 大二秋冬/复变函数与积分变换/课程指北/index.md
           - 杨海涛老师的PPT: 大二秋冬/复变函数与积分变换/PPT/index.md
