--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,7 @@ nav:
           - 复变函数复习笔记: 大二秋冬/复变函数与积分变换/复习笔记/index.md
       - 大学物理实验: 
           - 课程指北: 大二秋冬/大学物理实验/课程指北/index.md
+          - 实验报告: 大二秋冬/大学物理实验/实验报告/index.md
       - 工程训练: 
           - 课程指北: 大二秋冬/工程训练/课程指北/index.md
           - 工训题库: 大二秋冬/工程训练/工训题库/index.md
