--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -177,6 +177,7 @@ extra_javascript:
   - assets/javascripts/katex.js
   - assets/javascripts/clock.js
   - assets/javascripts/mathjax.js
+  - assets/javascripts/document.js
   - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.js  
   - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/contrib/auto-render.min.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
