--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,10 @@ nav:
           - 知识整理: 大二秋冬/数值分析方法/知识整理/index.md
       - 复变函数与积分变换: 
           - 课程指北: 大二秋冬/复变函数与积分变换/课程指北/index.md
+          - 我的复习笔记: 
+            - MyNotes: 大二秋冬/复变函数与积分变换/MyNotes/index.md
+            - Chapter1: 大二秋冬/复变函数与积分变换/MyNotes/Chapter1/index.md
+            - Chapter2: 大二秋冬/复变函数与积分变换/MyNotes/Chapter2/index.md
           - 杨海涛老师的PPT: 大二秋冬/复变函数与积分变换/PPT/index.md
           - 复变函数复习笔记: 大二秋冬/复变函数与积分变换/复习笔记/index.md
       - 大学物理实验: 
