--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,6 +64,8 @@ nav:
             - MyNotes: 大二秋冬/复变函数与积分变换/MyNotes/index.md
             - Chapter1: 大二秋冬/复变函数与积分变换/MyNotes/Chapter1/index.md
             - Chapter2: 大二秋冬/复变函数与积分变换/MyNotes/Chapter2/index.md
+            - Chapter3: 大二秋冬/复变函数与积分变换/MyNotes/Chapter3/index.md
+            - Chapter4: 大二秋冬/复变函数与积分变换/MyNotes/Chapter4/index.md
           - 杨海涛老师的PPT: 大二秋冬/复变函数与积分变换/PPT/index.md
       - 大学物理实验: 
           - 课程指北: 大二秋冬/大学物理实验/课程指北/index.md
