--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,28 @@ nav:
   - 首页: index.md
   - 大二春夏:
       - 课程概览: 大二春夏/课程概览/index.md
+      - 信号与系统: 
+          - 课程指北: 大二春夏/信号与系统/课程指北/index.md
+      - 数字系统设计: 
+          - 课程指北: 大二春夏/数字系统设计/课程指北/index.md
+      - 半导体物理: 
+          - 课程指北: 大二春夏/半导体物理/课程指北/index.md
+      - 马克思主义基本原理: 
+          - 课程指北: 大二春夏/马克思主义基本原理/课程指北/index.md
+      - 数据结构基础: 
+          - 课程指北: 大二春夏/数据结构基础/课程指北/index.md
+      - 信息理论: 
+          - 课程指北: 大二春夏/信息理论/课程指北/index.md
+      - 人工智能前沿: 
+          - 课程指北: 大二春夏/人工智能前沿/课程指北/index.md
+      - 控制的哲学与方法: 
+          - 课程指北: 大二春夏/控制的哲学与方法/课程指北/index.md
+      - 电子电路设计实验II: 
+          - 课程指北: 大二春夏/电子电路设计实验/课程指北/index.md
+      - 数字系统设计实验: 
+          - 课程指北: 大二春夏/数字系统设计实验/课程指北/index.md
+      - 通识课专栏: 
+          - 课程指北: 大二春夏/通识课专栏/课程指北/index.md
   - 大二秋冬: 
       - 课程概览: 大二秋冬/课程概览/index.md
       - 电子电路基础: 
