--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
           - 课程指北: 大二春夏/半导体物理/课程指北/index.md
       - 马克思主义基本原理: 
           - 课程指北: 大二春夏/马克思主义基本原理/课程指北/index.md
+          - MyNotes: 大二春夏/马克思主义基本原理/MyNotes/index.md
       - 数据结构基础: 
           - 课程指北: 大二春夏/数据结构基础/课程指北/index.md
       - 信息理论: 
