--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,8 @@ nav:
           - 课程指北: 大二春夏/数字系统设计/课程指北/index.md
           - MyNotes:
             - 课程概述: 大二春夏/数字系统设计/MyNotes/index.md  
-            - Chapter1逻辑代数基础: 大二春夏/数字系统设计/MyNotes/Chapter1/index.md
+            - Chapter1_1数制与码制: 大二春夏/数字系统设计/MyNotes/Chapter1_1/index.md
+            - Chapter1_2: 大二春夏/数字系统设计/MyNotes/Chapter1_2/index.md
       - 半导体物理: 
           - 课程指北: 大二春夏/半导体物理/课程指北/index.md
       - 马克思主义基本原理: 
