--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,7 @@ nav:
           - MyNotes:
             - 课程概述: 大二春夏/数字系统设计/MyNotes/index.md  
             - Chapter1_1数制与码制: 大二春夏/数字系统设计/MyNotes/Chapter1_1/index.md
-            - Chapter1_2: 大二春夏/数字系统设计/MyNotes/Chapter1_2/index.md
+            - Chapter1_2逻辑运算: 大二春夏/数字系统设计/MyNotes/Chapter1_2/index.md
       - 半导体物理: 
           - 课程指北: 大二春夏/半导体物理/课程指北/index.md
       - 马克思主义基本原理: 
