--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,8 @@ nav:
             - Chapter1_3逻辑函数: 大二春夏/数字系统设计/MyNotes/Chapter1_3/index.md
             - Chapter2_1基本逻辑门电路: 大二春夏/数字系统设计/MyNotes/Chapter2_1/index.md
             - Chapter2_2TTL: 大二春夏/数字系统设计/MyNotes/Chapter2_2/index.md
-            - Chapter2_3CMOS: 大二春夏/数字系统设计/MyNotes/Chapter2_3/index.md
+            - Chapter2_3CMOS&接口: 大二春夏/数字系统设计/MyNotes/Chapter2_3/index.md
+            - Chapter3_1组合逻辑电路: 大二春夏/数字系统设计/MyNotes/Chapter3_1/index.md
       - 半导体物理: 
           - 课程指北: 大二春夏/半导体物理/课程指北/index.md
       - 马克思主义基本原理: 
