--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -123,6 +123,7 @@ nav:
   - 无限进步: 
       - 简介: 无限进步/简介/index.md
       - Jetson Nano: 无限进步/Jetson/index.md
+      - 美赛: 无限进步/美赛/index.md
   - Bixing's 收藏页: 
       - 收藏的网页: Bixing's 收藏页/收藏的网页/index.md
       - MyCC98: Bixing's 收藏页/CC98/index.md
