--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
             - Chapter3_1加法器: 大二春夏/数字系统设计/MyNotes/Chapter3_1/index.md
             - Chapter3_2编码器&译码器: 大二春夏/数字系统设计/MyNotes/Chapter3_2/index.md
             - Chapter4_1触发器: 大二春夏/数字系统设计/MyNotes/Chapter4_1/index.md
+            - Chapter5_1时序逻辑: 大二春夏/数字系统设计/MyNotes/Chapter5_1/index.md
       - 半导体物理: 
           - 课程指北: 大二春夏/半导体物理/课程指北/index.md
       - 马克思主义基本原理: 
